# wave-docker-template

./: .env.tpl  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: containers.yaml  main.yaml
app/: app.py
conda/: containers.yaml  local.yaml  wave-base.yaml
containers/: Dockerfile  compose.yaml  entrypoint.sh  healthcheck.sh
containers/nginx/: Dockerfile  default.conf
containers/wave/: Dockerfile  entrypoint.sh
scripts/ci/: backend.sh  status_code_check.sh
